--- a/Dolar.html
+++ b/Dolar.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <a class="logo">PETFLIX</a>
+      <a class="logo">TechSolutions</a>
       <a class="espaco1" href="index.html">HOME</a>
       <a class = 'espaco2' href="CEP.html">CEP</a>
       <a class = 'espaco2' href="CPF.html">CPF</a>
