--- a/Dolar.html
+++ b/Dolar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5;url=https://www.exemplo.com">
+    <meta http-equiv="refresh" content="5">
     <title>Cotação do Dóla</title>
     <link rel="stylesheet" href="navegacao.css">
     <link rel="stylesheet" href="CEP.html">
