--- a/Dolar.html
+++ b/Dolar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="5">
-    <title>Cotação do Dóla</title>
+    <title>Cotação do Dólar</title>
     <link rel="stylesheet" href="navegacao.css">
     <link rel="stylesheet" href="CEP.html">
     <link rel="stylesheet" href="Clima.html">
@@ -33,7 +33,7 @@
   justify-content: center;
   flex-wrap: wrap;">
   <div class="caixa">
-    <h1>Cotação do Dóla</h1>
+    <h1>Cotação do Dólar</h1>
     <label for="">Valor do Dólar</label>
     <br>
     <p id="valorDolar">Valor do dolar</p>
