--- a/tema.html
+++ b/tema.html
@@ -43,7 +43,7 @@
             <div id="quantosJogadores"></div>
             <div id="estudio"></div>
             <button onclick="apertar1()">Mostrar The Witcher 3"</button>
-            <button onclick="apertar2()">Mostrar Zelda</button>
+            <button onclick="apertar2()">Mostrar <br> Zelda</button>
             <button onclick="apertar3()">Mostrar Bayonetta</button>
             <button onclick="apertar4()">Mostrar Devil May Cry 5</button>
             <button onclick="apertar5()">Mostrar God of War Ragnarok</button>
